feat: 列表架子初建

--- a/src/views/Home/index.styl
+++ b/src/views/Home/index.styl
@@ -1,6 +1,6 @@
 @import "~@/style/global.styl"
 .home{
-  background #ffffff
+  background url("../../static/image/background.jpg")
   background-repeat no-repeat
   background-size cover
   height 100vh
