feat: 新增若干组件

--- a/src/views/Home/NavContent/navContent.styl
+++ b/src/views/Home/NavContent/navContent.styl
@@ -4,10 +4,8 @@
   padding-top 20px
   color white
 
-  &__detail{
-    padding 20px
-    margin-top 20px
-    background rgba(255,255,255,0.1)
-    border-radius 8px
+  &__title{
+    padding-left 30px
+    font-size 20px
   }
 }
