feat: 功能新增，依赖新增

--- a/src/views/Home/NavContent/navContent.styl
+++ b/src/views/Home/NavContent/navContent.styl
@@ -8,4 +8,14 @@
     padding-left 30px
     font-size 20px
   }
+
+  &__input{
+    width 200px
+    margin-bottom 10px
+    display block
+  }
+
+  &__button{
+    width 200px
+  }
 }
