feat: image loading status

--- a/src/views/Home/NavItem/navItem.styl
+++ b/src/views/Home/NavItem/navItem.styl
@@ -42,5 +42,8 @@ $imageSize = 22px
     text-align center
     padding-top 10px
     font-size 13px
+    overflow hidden
+    text-overflow ellipsis
+    white-space nowrap
   }
 }
