feat: 标签删除功能

--- a/src/style/global.styl
+++ b/src/style/global.styl
@@ -46,6 +46,9 @@
   &.content-start {
     align-content: flex-start;
   }
+  &.content-center {
+    align-content: center;
+  }
   &.wrap {
     flex-wrap: wrap;
   }
