--- a/src/views/Home/NavItem/navItem.styl
+++ b/src/views/Home/NavItem/navItem.styl
@@ -2,22 +2,77 @@
 $navItemSize = 100px
 $logoSize = 40px
 $imageSize = 22px
+$editSize = 28px
 
 .nav-item{
   display inline-block
-  text-decoration none
   color white
   width $navItemSize
   height $navItemSize
   border-radius 6px
-  padding-top 16px
   text-align center
-  box-sizing border-box
-  cursor pointer
+  position relative
+  overflow hidden
 
-  &:hover{
+  &__link{
+    display inline-block
+    text-decoration none
+    width $navItemSize
+    height $navItemSize
+    box-sizing border-box
+    padding-top 16px
+    color white
+  }
+
+  &__link:hover{
     background rgba(255, 255, 255, 0.3)
     color white
+  }
+
+  &__link:hover &__edit{
+    visibility visible
+  }
+
+  &__edit{
+    width $editSize
+    height $editSize
+    position absolute
+    right 0
+    top 0
+    border-radius 6px
+    visibility hidden
+  }
+
+  &__overflow{
+    width 100%
+    height 100%
+    position absolute
+    left 0
+    border-radius 6px
+    z-index 99
+    background rgba(0, 0, 0, 0.7)
+    transition top 0.4s
+
+    &__edit{
+      padding 2px 0
+      cursor pointer
+    }
+
+    &__edit:hover{
+      background rgba(255, 255, 255,0.4)
+    }
+
+    &__image-content{
+      position absolute
+      right 4px
+      top 0
+      cursor pointer
+    }
+
+    &__image{
+      width 14px
+      height 14px
+    }
   }
 
   &__logo{
