feat: 编辑删除功能完善

--- a/src/views/Home/index.styl
+++ b/src/views/Home/index.styl
@@ -37,4 +37,14 @@
       @extend .body-content;
     }
   }
+
+  &__modal{
+    &__footer{
+      text-align right
+    }
+
+    &__cancel{
+      margin-right 10px
+    }
+  }
 }
