feat: 搜索初步接入

--- a/src/style/global.styl
+++ b/src/style/global.styl
@@ -57,6 +57,10 @@
     flex-direction: column;
   }
 
+  &.direction-right{
+    flex-direction row-reverse
+  }
+
   & > .self-align-end {
     align-self: flex-end;
   }
